parsing_table.output
Terminaux inutilisés dans la grammaire

    HEREDOC
    OUTPUT
    APPEND
    PIPE


Grammaire

    0 $accept: command $end

    1 command: cmd_prefix cmd_name cmd_suffix
    2        | cmd_name cmd_suffix

    3 cmd_name: WORD

    4 cmd_prefix: redirection

    5 cmd_suffix: redirection
    6           | cmd_suffix WORD
    7           | WORD

    8 redirection: INPUT WORD


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    WORD (258) 3 6 7 8
    INPUT (259) 8
    HEREDOC (260)
    OUTPUT (261)
    APPEND (262)
    PIPE (263)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (9)
        à gauche: 0
    command (10)
        à gauche: 1 2
        à droite: 0
    cmd_name (11)
        à gauche: 3
        à droite: 1 2
    cmd_prefix (12)
        à gauche: 4
        à droite: 1
    cmd_suffix (13)
        à gauche: 5 6 7
        à droite: 1 2 6
    redirection (14)
        à gauche: 8
        à droite: 4 5


État 0

    0 $accept: . command $end

    WORD   décalage et aller à l'état 1
    INPUT  décalage et aller à l'état 2

    command      aller à l'état 3
    cmd_name     aller à l'état 4
    cmd_prefix   aller à l'état 5
    redirection  aller à l'état 6


État 1

    3 cmd_name: WORD .

    $défaut  réduction par utilisation de la règle 3 (cmd_name)


État 2

    8 redirection: INPUT . WORD

    WORD  décalage et aller à l'état 7


État 3

    0 $accept: command . $end

    $end  décalage et aller à l'état 8


État 4

    2 command: cmd_name . cmd_suffix

    WORD   décalage et aller à l'état 9
    INPUT  décalage et aller à l'état 2

    cmd_suffix   aller à l'état 10
    redirection  aller à l'état 11


État 5

    1 command: cmd_prefix . cmd_name cmd_suffix

    WORD  décalage et aller à l'état 1

    cmd_name  aller à l'état 12


État 6

    4 cmd_prefix: redirection .

    $défaut  réduction par utilisation de la règle 4 (cmd_prefix)


État 7

    8 redirection: INPUT WORD .

    $défaut  réduction par utilisation de la règle 8 (redirection)


État 8

    0 $accept: command $end .

    $défaut  accepter


État 9

    7 cmd_suffix: WORD .

    $défaut  réduction par utilisation de la règle 7 (cmd_suffix)


État 10

    2 command: cmd_name cmd_suffix .
    6 cmd_suffix: cmd_suffix . WORD

    WORD  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 2 (command)


État 11

    5 cmd_suffix: redirection .

    $défaut  réduction par utilisation de la règle 5 (cmd_suffix)


État 12

    1 command: cmd_prefix cmd_name . cmd_suffix

    WORD   décalage et aller à l'état 9
    INPUT  décalage et aller à l'état 2

    cmd_suffix   aller à l'état 14
    redirection  aller à l'état 11


État 13

    6 cmd_suffix: cmd_suffix WORD .

    $défaut  réduction par utilisation de la règle 6 (cmd_suffix)


État 14

    1 command: cmd_prefix cmd_name cmd_suffix .
    6 cmd_suffix: cmd_suffix . WORD

    WORD  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 1 (command)
